WIP commit, starting to look at & syntactically upgrade exporters